Pagination in admin panel

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-PHPCSV Guestbook version 0.93
+PHPCSV Guestbook version 0.94
 
 Simple php guestbook with csv file data storage.
 
 Working example: https://zlaxyi.soundragon.su/gb
 
-PHPCSV Guestbook 0.93 requires PHP 5.0 or higher version.
+PHPCSV Guestbook requires PHP 5.0 or higher version.
 
 Installation:
 
