--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-PHPCSV Guestbook version 0.99.6
+PHPCSV Guestbook version 0.99.8
 
-Simple php guestbook with csv file data storage.
+Simple php guestbook/feedback form with csv file data storage.
 
 Features:
   - English, Arabic and Russian localization
@@ -14,6 +14,7 @@ Features:
   - Replies
   - Locked and sticky posts
   - Special fields
+  - Feedback form mode
 
 Working examples:
  http://arabic.freecluster.eu
@@ -30,7 +31,7 @@ Archive: https://github.com/zlaxy/phpcsvguestbook/archive/master.zip
 
 2. Edit settings.php: change $GBadmin and $GBpassword (and other variables if necessary)
 
-3. Check privileges for access to files: data storage (default: gbdb.csv) must have write permissions. If you enabled upload feature, 'upload' directory must have rwx permissions. Other files need only read rights.
+3. Check privileges for access to files: data storage (default: .htgbdb.csv) must have write permissions. If you enabled upload feature, 'upload' directory must have rwx permissions. Other files need only read rights.
 
 Using:
 
