--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-**Actual development is here:** https://gitlab.com/zlax/phpcsvguestbook
+# Actual development is here: https://gitlab.com/zlax/phpcsvguestbook
 
 
 PHPCSV Guestbook version 0.99.8
